--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -87,6 +87,7 @@ jobs:
           echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> android/key.properties
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
+          cat android/key.properties
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
