--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -75,18 +75,13 @@ jobs:
         run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' pubspec.yaml
       - name: keystore value
         run: echo ${{secrets.KEYSTORE_BASE64}}
-      - name: Download Android keystore
-        id: android_keystore
-        uses: timheuer/base64-to-file@v1.0.3
-        with:
-          fileName: upload-keystore.jks
-          encodedString: ${{ secrets.KEYSTORE_BASE64 }}
       - name: Create key.properties
         run: |
           echo "storeFile=${{ steps.android_keystore.outputs.filePath }}" > android/key.properties
           echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> android/key.properties
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
+          echo "keyAlia=${{ secrets.KEYSTORE_BASE64 }}" >> android/key.properties
           cat android/key.properties
       - uses: actions/setup-java@v3
         with:
